--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ packaging @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_
 pandas @ file:///home/conda/feedstock_root/build_artifacts/pandas_1759265541279/work
 parso @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_parso_1755974222/work
 pathlib==1.0.1
+patsy @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_patsy_1760998269/work
 pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1733301927746/work
 pillow @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_pillow_1764033139/work
 platformdirs @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_platformdirs_1759953252/work
@@ -38,10 +39,12 @@ python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-
 pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1742920838005/work
 pyzmq @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_pyzmq_1757387023/work
 scipy @ file:///home/conda/feedstock_root/build_artifacts/scipy-split_1763219272390/work/dist/scipy-1.16.3-cp312-cp312-linux_x86_64.whl#sha256=72f528660eda2b30b8b3bd20317d59babbd383e261ef86a385dc0a0ba61950e8
+seaborn @ file:///home/conda/feedstock_root/build_artifacts/seaborn-split_1733730015268/work
 setuptools==80.9.0
 shiboken6==6.9.3
 six @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_six_1753199211/work
 stack_data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1733569443808/work
+statsmodels @ file:///home/conda/feedstock_root/build_artifacts/statsmodels_1759296970084/work
 tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1762506760242/work
 traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1733367359838/work
 typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_typing_extensions_1756220668/work
